<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">
    <!--语种选择区域  -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/language_code_region"
            android:textSize="18sp"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Spinner
                android:id="@+id/spinner_from_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:entries="@array/language_codes" />

            <ImageView
                android:id="@+id/image_view_exchange"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@mipmap/language_exchange">

            </ImageView>

            <Spinner
                android:id="@+id/spinner_dest_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:entries="@array/language_codes" />
        </LinearLayout>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black1" />
    <!-- 输入框翻译区域 -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/input_content_region"
            android:textSize="18sp"></TextView>

        <EditText
            android:id="@+id/input_content_et"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:hint="@string/hint_input_content"
            android:text="@string/text_input_content"></EditText>

        <Button
            android:id="@+id/translate_input_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_translate_btn"></Button>
    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black1" />

    <!-- SD卡翻译区域 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/load_content_region"
            android:textSize="18sp"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/hint_load_content_text"></TextView>

        <Button
            android:id="@+id/translate_load_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hint_load_content_btn"></Button>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:background="@color/black1" />
    <!-- 展示区域-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/translate_result"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:gravity="center"
            android:scrollbars="vertical"
            android:text="@string/hint_translate_result"
            android:textSize="18sp" />

        <Button
            android:id="@+id/save_result_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_result">

        </Button>

    </LinearLayout>

</LinearLayout>